01. 프로젝트 생성

--- a/mvcboard/src/main/webapp/WEB-INF/web.xml
+++ b/mvcboard/src/main/webapp/WEB-INF/web.xml
@@ -3,18 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-    <!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+    <display-name>Archetype Created Web Application</display-name>
+
+    <!--DataSource, Mybatis 설정 xml 경로-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/spring-config/applicationContext.xml</param-value>
     </context-param>
 
-    <!-- Creates the Spring Container shared by all Servlets and Filters -->
+    <!--리스너-->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
-    <!-- Processes application requests -->
+    <!--servlet dispatcher 설정 xml 경로-->
     <servlet>
         <servlet-name>appServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -25,9 +27,24 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
+    <!--servlet mapping 설정-->
     <servlet-mapping>
         <servlet-name>appServlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
+    <!--한글 인코딩 설정-->
+    <filter>
+        <filter-name>encoding</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>encoding</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
